@@ -1,3 +1,8 @@
+2005-03-09  Zoltan Varga  <vargaz@freemail.hu>
+
+	* pthread_support.c (GC_thread_is_registered): Move this outside of
+	the #ifdef THREAD_LOCAL_ALLOC.
+
 2005-03-03  Zoltan Varga  <vargaz@freemail.hu>
 
 	* include/gc.h pthread_support.c win32_threads.: Add 
